syntax = "proto3";

package sherry.archive.api.v1;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "sherry-archive/api;api";

service ArchiveService {
  // GetBooks
  rpc GetBooks(GetBookRequest) returns (GetBookResponse) {
    option (google.api.http) = {
      post: "/api/v1/books"
      body: "*"
    };
  }

  rpc UpsertBook(UpsertBookRequest) returns (UpsertBookResponse) {
    option (google.api.http) = {
      post: "/api/v1/upsert-book"
      body: "*"
    };
  }

  rpc GetPages(GetPagesRequest) returns (GetPagesResponse) {
    option (google.api.http) = {
      post: "/api/v1/pages"
      body: "*"
    };
  }

  rpc CreatePages(CreatePagesRequest) returns (CreatePagesResponse) {
    option (google.api.http) = {
      post: "/api/v1/create-pages"
      body: "*"
    };
  }

  rpc UpdatePage(UpdatePageRequest) returns (UpdatePageResponse) {
    option (google.api.http) = {
      post: "/api/v1/update-pages"
      body: "*"
    };
  }

  // GetAuthors
  rpc GetAuthors(GetAuthorsRequest) returns (GetAuthorsResponse) {
    option (google.api.http) = {
      post: "/api/v1/authors"
      body: "*"
    };
  }

  // GetPublishers
  rpc GetPublishers(GetPublishersRequest) returns (GetPublishersResponse) {
    option (google.api.http) = {
      post: "/api/v1/publisher"
      body: "*"
    };
  }

}

message GetBookRequest {
  repeated uint32 book_ids = 1;
  google.protobuf.UInt32Value category_id = 2;
  google.protobuf.UInt32Value author_id = 3;
  google.protobuf.UInt32Value publisher_id = 4;
  uint32 page = 5;
  uint32 page_size = 6;
}

message GetBookResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    repeated Book books = 1;
    Pagination pagination = 2;
  }
}

message UpsertBookRequest {
  google.protobuf.UInt32Value id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue image_url = 4;
  google.protobuf.BytesValue image = 5;
  google.protobuf.UInt32Value author_id = 6;
  google.protobuf.UInt32Value publisher_id = 7;
  google.protobuf.UInt32Value category_id = 8;
  google.protobuf.UInt64Value publication_date = 9;
}


message UpsertBookResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    Book book = 1;
  }
}

message GetPagesRequest {
  google.protobuf.UInt32Value book_id = 1;
  repeated uint32 ids = 2;
  uint32 page = 3;
  uint32 page_size = 4;
}

message GetPagesResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    repeated Page pages = 1;
    Pagination pagination = 2;
  }
}

message CreatePagesRequest {
  uint32 book_id = 1;
  bytes pages = 2;
}

message CreatePagesResponse {
  uint32 code = 1;
  string message = 2;
}

message UpdatePageRequest {
  uint32 id = 1;
  uint32 book_id = 2;
  string image_url = 3;
  google.protobuf.BytesValue image = 4;
  uint32 index = 5;
}

message UpdatePageResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    Page page = 1;
  }
}

message GetAuthorsRequest {
  repeated uint32 author_ids = 1;
  uint32 page = 2;
  uint32 page_size = 3;
}

message GetAuthorsResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    repeated Author authors = 1;
    Pagination pagination = 2;
  }
}

message GetPublishersRequest {
  repeated uint32 publisher_ids = 1;
  uint32 page = 2;
  uint32 page_size = 3;
}

message GetPublishersResponse {
  uint32 code = 1;
  string message = 2;
  Data data = 3;

  message Data {
    repeated Publisher publishers = 1;
    Pagination pagination = 2;
  }
}

message Book {
  uint32 id = 1;
  string title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue image_url = 4;
  google.protobuf.UInt32Value author_id = 5;
  google.protobuf.UInt32Value publisher_id = 6;
  google.protobuf.UInt32Value category_id = 7;
  google.protobuf.UInt64Value publication_date = 8;
}

message Page {
  uint32 id = 1;
  uint32 book_id = 2;
  string image_url = 3;
  uint32 index = 4;
}

message Author {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string image_url = 4;
}

message Publisher {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string image_url = 4;
}

message Pagination {
  uint32 page = 1;
  uint32 page_size = 2;
}